src/test/ui/numeric/numeric-fields.stderr
error[E0560]: struct `S` has no field named `0b1`
  --> $DIR/numeric-fields.rs:4:15
   |
LL | struct S(u8, u16);
   |        - `S` defined here
...
LL |     let s = S{0b1: 10, 0: 11};
   |             - ^^^ field does not exist
   |             |
   |             `S` is a tuple struct, use the appropriate syntax: `S(/* fields */)`

error[E0026]: struct `S` does not have a field named `0x1`
  --> $DIR/numeric-fields.rs:7:17
   |
LL |         S{0: a, 0x1: b, ..} => {}
   |                 ^^^ struct `S` does not have this field

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0026, E0560.
For more information about an error, try `rustc --explain E0026`.
